--- a/package.json
+++ b/package.json
@@ -37,6 +37,10 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.16.7"
+    "@babel/plugin-proposal-class-properties": "^7.16.7",
+    "@tailwindcss/forms": "^0.4.0",
+    "autoprefixer": "^10.4.2",
+    "postcss": "^8.4.6",
+    "tailwindcss": "^3.0.22"
   }
 }
